--- a/project/blog/package.json
+++ b/project/blog/package.json
@@ -22,6 +22,7 @@
     "rc": "1.0.1",
     "sails": "~0.12.11",
     "sails-disk": "~0.10.9",
+    "sails-mongo": "^0.12.2",
     "swig": "^1.4.2",
     "swig-extras": "^0.0.1"
   },
